--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "just-debounce-it": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "wouter": "^2.8.0-alpha.2"
