--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "just-debounce-it": "^3.0.1",
     "react": "^18.0.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.0.0",
     "wouter": "^2.8.0-alpha.2"
   },
