--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.0.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.0.0",
+    "react-loader-spinner": "^5.1.7-beta.1",
     "wouter": "^2.8.0-alpha.2"
   },
   "devDependencies": {
