--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "just-debounce-it": "^3.0.1",
-    "react": "^18.0.0",
-    "react-content-loader": "^6.2.0",
-    "react-dom": "^18.0.0",
-    "react-lazy-load-image-component": "^1.5.5",
-    "react-loader-spinner": "^5.1.7-beta.1",
-    "wouter": "^2.8.0-alpha.2"
+    "just-debounce-it": "3.0.1",
+    "react": "18.0.0",
+    "react-content-loader": "6.2.0",
+    "react-dom": "18.0.0",
+    "react-lazy-load-image-component": "1.5.5",
+    "react-loader-spinner": "5.1.7-beta.1",
+    "wouter": "2.8.0-alpha.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-lazy-load-image-component": "^1.5.2",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "@types/react-lazy-load-image-component": "1.5.2",
+    "@vitejs/plugin-react": "1.3.0",
+    "typescript": "4.6.3",
+    "vite": "2.9.9"
   }
 }
