--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "wouter": "2.11.0"
   },
   "devDependencies": {
+    "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/react-lazy-load-image-component": "1.5.2",
